# slog

./: .clang-format  .clang-tidy  .gitignore  Benchmark.txt  CMakeLists.txt  FileSink_8hpp_source.html  LogChannel_8hpp_source.html  LogRecordPool_8hpp_source.html  LogRecord_8hpp_source.html  README.md  annotated.html  classslog_1_1ConsoleSink-members.html  classslog_1_1ConsoleSink__inherit__graph.map  classslog_1_1ConsoleSink__inherit__graph.md5  classslog_1_1FileSink.html  classslog_1_1FileSink.js  classslog_1_1FileSink__inherit__graph.map  classslog_1_1FileSink__inherit__graph.md5  classslog_1_1FlatThresholdMap.html  classslog_1_1FlatThresholdMap__coll__graph.map  classslog_1_1JournaldSink-members.html  classslog_1_1JournaldSink.js  classslog_1_1JournaldSink__coll__graph.md5  classslog_1_1LogChannel_1_1LogQueue__coll__graph.md5  classslog_1_1LogChannel__coll__graph.md5  classslog_1_1LogConfig.html  classslog_1_1LogConfig.js  classslog_1_1LogRecordPool-members.html  classslog_1_1LogRecordPool.js  classslog_1_1LogRecordPool__coll__graph.map  classslog_1_1LogSink.html  classslog_1_1LogSink.js  classslog_1_1LogSink__inherit__graph.md5  classslog_1_1NullSink.js  classslog_1_1NullSink__coll__graph.map  classslog_1_1NullSink__coll__graph.md5  functions_vars.html  hierarchy.html  hierarchy.js  inherit_graph_1.map  (+18 more)
.github/workflows/: cmake-single-platform.yml  doxygen-gh-pages.yml  static.yml
benchmark/: CMakeLists.txt  bench.cpp
cmake/: FindJournald.cmake  SlogConfig.cmake.in
doc/: Doxyfile
doc/html/: BinarySink_8hpp_source.html  ConsoleSink_8hpp_source.html  FileSink_8hpp_source.html  JournaldSink_8hpp_source.html  LogChannel_8hpp_source.html  LogRecordPool_8hpp_source.html  LogRecord_8hpp_source.html  LogSetup_8hpp_source.html  LogSink_8hpp_source.html  LoggerSingleton_8hpp_source.html  RecordInserter_8hpp_source.html  SlogError_8hpp_source.html  SyslogSink_8hpp_source.html  ThresholdMap_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classslog_1_1BinarySink-members.html  classslog_1_1BinarySink.html  classslog_1_1BinarySink.js  classslog_1_1BinarySink__inherit__graph.map  classslog_1_1BinarySink__inherit__graph.md5  classslog_1_1CaptureBinary-members.html  (+98 more)
docs/: BinarySink_8hpp_source.html  ConsoleSink_8hpp_source.html  FileSink_8hpp_source.html  JournaldSink_8hpp_source.html  Locale_8hpp_source.html  LogChannel_8hpp_source.html  LogRecordPool_8hpp_source.html  LogRecord_8hpp_source.html  LogSetup_8hpp_source.html  LogSink_8hpp_source.html  LogWorker_8hpp_source.html  LoggerSingleton_8hpp_source.html  PlatformUtilities_8hpp_source.html  RecordInserter_8hpp_source.html  Signal_8hpp_source.html  SlogError_8hpp_source.html  SyslogSink_8hpp_source.html  ThresholdMap_8hpp_source.html  Timestamp_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classslog_1_1BinarySink-members.html  classslog_1_1BinarySink.html  classslog_1_1BinarySink.js  classslog_1_1BinarySink__coll__graph.map  classslog_1_1BinarySink__coll__graph.md5  classslog_1_1BinarySink__inherit__graph.map  classslog_1_1ConsoleSink-members.html  classslog_1_1ConsoleSink.html  classslog_1_1ConsoleSink__coll__graph.map  classslog_1_1FileSink-members.html  classslog_1_1FileSink.html  classslog_1_1FileSink.js  classslog_1_1FileSink__coll__graph.map  classslog_1_1FileSink__coll__graph.md5  classslog_1_1FileSink__inherit__graph.map  classslog_1_1FlatThresholdMap-members.html  classslog_1_1FlatThresholdMap.html  classslog_1_1FlatThresholdMap__coll__graph.map  (+79 more)
doxygen/: Doxyfile
example/: Business.cpp  Business.hpp  CMakeLists.txt  main.cpp
search/: all_1.js  all_2.js  all_3.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  functions_1.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_3.js  variables_4.js
src/: AllocatingRecordPool.cpp  AllocatingRecordPool.hpp  BlockingRecordPool.cpp  BlockingRecordPool.hpp  CMakeLists.txt  CapturePrintf.cpp  CapturePrintf.hpp  CaptureStream.cpp  CaptureStream.hpp  ConsoleSink.hpp  DiscardRecordPool.cpp  DiscardRecordPool.hpp  FileSink.cpp  FileSink.hpp  JournaldSink.cpp  JournaldSink.hpp  LfRecordPool.cpp  LfRecordPool.hpp  LogChannel.cpp  LogChannel.hpp  LogConfig.hpp  LogConfig.hpp.in  LogCore.cpp  LogCore.hpp  LogQueue.cpp  LogQueue.hpp  LogRecord.cpp  LogRecord.hpp  LogRecordPool.cpp  LogRecordPool.hpp  LogSetup.hpp  LogSink.cpp  LogSink.hpp  SinkTools.cpp  SinkTools.hpp  ThresholdMap.cpp  ThresholdMap.hpp  clog.hpp  flog.hpp  slog.hpp
src/slog/: BinarySink.cpp  BinarySink.hpp  CMakeLists.txt  CaptureBinary.cpp  CapturePrintf.cpp  CaptureStream.cpp  ConsoleSink.hpp  FileSink.cpp  FileSink.hpp  JournaldSink.cpp  JournaldSink.hpp  Locale.cpp  Locale.hpp  LogChannel.cpp  LogChannel.hpp  LogConfig.hpp.in  LogCore.cpp  LogRecord.cpp  LogRecord.hpp  LogRecordPool.cpp  LogRecordPool.hpp  LogSetup.cpp  LogSetup.hpp  LogSink.cpp  LogSink.hpp  LogWorker.cpp  LogWorker.hpp  LoggerSingleton.cpp  LoggerSingleton.hpp  PlatformUtilities.hpp  PlatformUtilitiesPosix.cpp  RecordInserter.cpp  RecordInserter.hpp  Signal.cpp  Signal.hpp  Signals.cpp  Signals.hpp  SlogConfig.hpp.in  SlogError.cpp  SlogError.hpp  (+10 more)
test/: Basics.cpp  BinaryLogTest.cpp  CMakeLists.txt  ChannelTest.cpp  CstringStream.cpp  DeathTests.cpp  ExitTest.cpp  FileLogTest.cpp  FlogTest.cpp  HandlerProgram.cpp  HandlerTest.cpp  InMemorySink.cpp  InMemorySink.hpp  JournaldTest.cpp  JumboTest.cpp  LogPerformance.cpp  LogStreamPerformance.cpp  PlatformUtilitiesTest.cpp  PlogTest.cpp  SlowSink.cpp  SlowSink.hpp  StatsSink.cpp  StatsSink.hpp  StoppedTest.cpp  Stream.cpp  SyslogTest.cpp  ThresholdMapTest.cpp  TimestampTest.cpp  WorkerTest.cpp  main.cpp  syslogTest.py  testUtilities.cpp  testUtilities.hpp
test/exitTest/: CMakeLists.txt  main.cpp
test/performanceTest/: CMakeLists.txt  LogPerformance.cpp  LogStreamPerformance.cpp  StatsSink.cpp  StatsSink.hpp
test/signalTest/: CMakeLists.txt  main.cpp  slowSink.cpp  slowSink.hpp
(+153 files in other folders)
